# workspace-perf-data

./: README.md  latency.md  local.ipynb  normed_udp.ipynb  process.py  pyproject.toml  temp.txt  udp.ipynb
logs/local/: test-10n-1000ms.csv  test-10n-100ms.csv  test-10n-500ms.csv  test-10n-50ms.csv  test-15n-1000ms.csv  test-15n-100ms.csv  test-15n-500ms.csv  test-15n-50ms.csv  test-20n-1000ms.csv  test-20n-100ms.csv  test-20n-500ms.csv  test-20n-50ms.csv  test-5n-1000ms.csv  test-5n-100ms.csv  test-5n-500ms.csv  test-5n-50ms.csv
logs/processed/1-100/: 1.csv  2.csv  3.csv  4.csv
logs/processed/1-1000/: 1.csv  2.csv  3.csv  4.csv
logs/processed/1-50/: 1.csv  2.csv  3.csv  4.csv
logs/processed/1-500/: 1.csv  2.csv  3.csv  4.csv
logs/processed/2-100/: 1.csv  2.csv  3.csv  4.csv
logs/processed/2-1000/: 1.csv  2.csv  3.csv  4.csv
logs/processed/2-50/: 1.csv  2.csv  3.csv  4.csv
logs/processed/2-500/: 1.csv  2.csv  3.csv  4.csv
logs/processed/3-100/: 1.csv  2.csv  3.csv  4.csv
logs/processed/3-100-01/: 1.csv  3.csv  4.csv
logs/processed/3-1000/: 1.csv  2.csv  3.csv  4.csv
logs/processed/3-50/: 1.csv  2.csv  3.csv  4.csv
logs/processed/3-500/: 1.csv  2.csv  3.csv  4.csv
logs/processed/4-100/: 1.csv  2.csv  3.csv  4.csv
logs/processed/4-1000/: 1.csv  2.csv  3.csv  4.csv
logs/processed/4-50/: 1.csv  2.csv  3.csv  4.csv
logs/processed/4-500/: 1.csv  2.csv  3.csv  4.csv
logs/udp/1-100/: 1.csv  2.csv  3.csv  4.csv
logs/udp/1-1000/: 1.csv  2.csv  3.csv  4.csv
logs/udp/1-50/: 1.csv  2.csv  3.csv  4.csv
logs/udp/1-500/: 1.csv  2.csv  3.csv  (+1 more)
(+117 files in other folders)
